
2012-08-20  Hermet (ChunEon Park)

	* Removed unnessesary lines which causes the gles resource leak and
	corruption.

2012-08-21  Sung W. Park (sung_)

        * Fix evas_gl current_context update issue when evas_gl context is deleted.

2012-08-23  Tom Hacohen (TAsn)

	* Textblock: Fixed bug with 1 char word separators at the start of the
	text when going to the start of the word (e.g: "=test").

2012-08-26  Jiyoun Park(jypark)

	* Jpeg loader: fix orientation didn't work if jpeg file format is JFIF.
	Add code deal with JFIF file format.

2012-08-27  Tom Hacohen (TAsn)

	* Textblock: Make sure scale changes causes a complete recalc.

2012-08-29  Christopher Michael (devilhorns)

	* Wayland Egl Engine: Add support for Multi-Sample Anti-Aliasing and GL Direct Images.
                              Add support for using native image binding.
                              Add support for setting GL surface capabilities.

2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-31  Christophe Sadoine

       * Added a function: evas_map_util_quat_rotate().

2012-09-02  Vincent Torri

       * Fix seg fault in the esvg loader, latest code is required, and
	 enable it on Windows.

2012-09-03  Igor Murzov

       * Add WEBP loader module and cserve2 binary loader patch.

2012-09-03  Christopher Michael (devilhorns)

       * When doing a move or geometry_get, we need to make sure that we 
	 don't try to do these on the framespace clip object. Also, since we
	 need the evas to get the framespace clip object, just directly use the
	 framespace values from the canvas, rather than function call to get
	 those values.

2012-09-05  ChunEon Park (Hermet)

       * Added EVAS_CALLBACK_IMAGE_RESIZE. Now user have a notify when image data size of the image object is changed.

2012-09-05  Carsten Haitzler (The Rasterman)

       * Fix EGL/GLES bug when setting up rgba dest alpha windows where they
       cease to be rendered to. use a shared context and it works.