@@ -1029,3 +1029,8 @@
 
        * Fix EGL/GLES bug when setting up rgba dest alpha windows where they
        cease to be rendered to. use a shared context and it works.
+
+2012-09-07  Carsten Haitzler (The Rasterman)
+
+       * Fix image alpha set bug if the image data has not been loaded
+       yet from disk. Fixes across software and gl engines needed.
